ensure issues/changes text wraps

--- a/application/static/css/pages/_journeys.scss
+++ b/application/static/css/pages/_journeys.scss
@@ -155,6 +155,10 @@ a{
 	font-size: 19px;
 }
 
+.image.zoomed-in li {
+  white-space: normal;
+}
+
 .image.zoomed-in .button{
 	display: none;
 	display: inline-block;
